Make everything work squash bugs add features (#31)
* added html width in popup.css

* add modal

* add plant updating

* update plant

* remove sound

* fix

* fix popup dom ready issue, modal btn styles

* formatting

* works on my machine

* fix states

* status polling async

* fix y overflow in popup

--- a/styles/popup.css
+++ b/styles/popup.css
@@ -16,7 +16,7 @@ body {
 
 .container {
     background-color: #FFF6DE;
-    padding: 2rem;
+    /* padding: 2rem; */
     border-radius: 8px;
     width: 400px;
     text-align: center;
@@ -261,7 +261,7 @@ input[type="number"] {
 .btn {
     --btn-color: rgb(40, 51, 169);
     --btn-bg: rgb(96, 153, 238);
-    margin: 40px;
+    /* margin: 40px; */
     position: relative;
     display: inline-flex;
     align-items: center;
